# narwhal

./: Cargo.toml  README.md  config.toml
.github/workflows/: rust.yml
benchmark/: README.md  fabfile.py  settings.json
benchmark/benchmark/: commands.py  config.py  ips.json  local.py  remote.py
benchmark/data/latest/: README.md
benchmark/data/latest/bullshark/: bench-0-10-1-True-130000-512.txt  bench-0-10-1-True-135000-512.txt  bench-0-10-1-True-140000-512.txt  bench-0-20-1-True-110000-512.txt  bench-0-20-1-True-120000-512.txt  bench-0-20-1-True-130000-512.txt  bench-0-20-1-True-140000-512.txt  bench-0-20-1-True-150000-512.txt  bench-0-20-1-True-90000-512.txt  bench-0-50-1-True-130000-512.txt  bench-0-50-1-True-145000-512.txt  bench-1-10-1-True-50000-512.txt  bench-3-10-1-True-100000-512.txt  bench-3-10-1-True-110000-512.txt  bench-3-10-1-True-50000-512.txt  bench-3-10-1-True-80000-512.txt  bench-3-10-1-True-90000-512.txt
benchmark/data/paper-data/: README.md  plot-script.py
benchmark/data/paper-data/bullshark/: bench-0-10-1-True-10000-512.txt  bench-0-10-1-True-100000-512.txt  (+14 more)
config/: Cargo.toml
config/src/: lib.rs
consensus/: Cargo.toml
consensus/src/: committer.rs  dolphin.rs  lib.rs  state.rs  tusk.rs  virtual_state.rs
consensus/src/dolphin/: committer.rs  core.rs  dolphin.rs  mod.rs  virtual_state.rs
consensus/src/tests/: consensus_tests.rs
consensus/src/tusk/: mod.rs
hotstuff/: Cargo.toml
hotstuff/src/: aggregator.rs  committer.rs  config.rs  consensus.rs  core.rs  error.rs  helper.rs  leader.rs  lib.rs  mempool.rs  messages.rs  proposer.rs  synchronizer.rs  timer.rs
hotstuff/src/tests/: aggregator_tests.rs  common.rs  consensus_tests.rs  core_tests.rs  helper_tests.rs  messages_tests.rs  synchronizer_tests.rs  timer_tests.rs
network/src/: reliable_sender.rs
node/: Cargo.toml
node/src/: main.rs
primary/: Cargo.toml  README.md
primary/src/: aggregators.rs  certificate_waiter.rs  core.rs  error.rs  header_waiter.rs  lib.rs  messages.rs  primary.rs  proposer.rs  synchronizer.rs
primary/src/tests/: core_tests.rs  proposer_tests.rs
results/: plot.py  plot_faults.py  plot_fig6.py  plot_summary.py  plot_worker_perf.py  plot_worker_tps.py
results/data/Baseline HS/: bench-config.txt
results/data/Batched HS/: bench-config.txt
rust/: Cargo.toml
rust/bench_worker/: Cargo.toml
rust/bench_worker/src/: config.rs  main.rs
rust/benchmark/: benchmark_client  fabfile.py  node
rust/benchmark/.db-0/: 000013.sst  IDENTITY  LOG  LOG.old.1623248906043060  MANIFEST-000008  OPTIONS-000011
rust/benchmark/.db-1/: 000013.sst  IDENTITY  LOG  LOG.old.1623248906048825  MANIFEST-000008  OPTIONS-000006
rust/benchmark/.db-2/: 000013.sst  IDENTITY  LOG  LOG.old.1623248906064844  MANIFEST-000008  OPTIONS-000006
rust/benchmark/aws/: instance.py  remote.py  settings.py
rust/benchmark/benchmark/: aggregate.py  commands.py  config.py  local.py  logs.py  plot.py  utils.py
rust/benchmark/results/: bench-10-1-10000-512-3.txt  bench-10-1-100000-512-3.txt  bench-10-1-70000-512-3.txt
rust/config/: Cargo.toml
rust/config/src/: lib.rs
rust/consensus/: Cargo.toml
rust/consensus/src/: consensus.rs  lib.rs
rust/crypto/src/: lib.rs
rust/dag_core/: Cargo.toml
rust/dag_core/src/: committee.rs  consensus.rs  consensus_2.rs  error.rs  lib.rs  manage_primary.rs  manage_worker.rs  mempool.rs  messages.rs  net.rs  primary.rs  primary_net.rs  processor.rs  receive_worker.rs  send_worker.rs  store.rs  sync_driver.rs  sync_server.rs  sync_worker.rs  synchronizer.rs  types.rs
rust/dag_core/src/tests/: consensus_tests.rs  messages_tests.rs  net_tests.rs  primary_intergration_tests.rs  primary_net_tests.rs  primary_tests.rs  primary_worker_intergration_tests.rs  processor_tests.rs  receiver_tests.rs  store_tests.rs  sync_worker_tests.rs  types_tests.rs  worker_integration_tests.rs
rust/hotstuff/: Cargo.toml
rust/hotstuff/src/: aggregator.rs  config.rs  consensus.rs  core.rs  error.rs  leader.rs  lib.rs  messages.rs  synchronizer.rs  timer.rs
rust/hotstuff/src/tests/: aggregator_tests.rs  common.rs  consensus_tests.rs  core_tests.rs  mempool_tests.rs  messages_tests.rs  synchronizer_tests.rs  timer_tests.rs
rust/network/src/: lib.rs  receiver.rs  reliable_sender.rs  simple_sender.rs
rust/network_hs/: Cargo.toml
rust/network_hs/src/: lib.rs
rust/network_hs/src/tests/: network_tests.rs
rust/node/: Cargo.toml
rust/node/src/: benchmark_client.rs  main.rs  old_config.rs  old_main.rs
rust/primary/: Cargo.toml
rust/primary/src/: aggregators.rs  certificate_waiter.rs  committee.rs  core.rs  error.rs  garbage_collector.rs  header_waiter.rs  helper.rs  lib.rs  manage_primary.rs  messages.rs  old_messages.rs  old_primary.rs  old_synchronizer.rs  payload_receiver.rs  primary.rs  primary_net.rs  processor.rs  proposer.rs  sync_driver.rs  sync_server.rs  synchronizer.rs  types.rs  waiter.rs
rust/primary/src/tests/: common.rs  consensus_tests.rs  core_tests.rs  messages_tests.rs  primary_net_tests.rs  primary_tests.rs  processor_tests.rs  proposer_tests.rs  types_tests.rs
rust/store/: Cargo.toml
rust/store/src/: lib.rs
rust/store_hs/: Cargo.toml
rust/store_hs/src/: lib.rs
rust/worker/: Cargo.toml
rust/worker/src/: batch_maker.rs  helper.rs  lib.rs  manage_worker.rs  net.rs  primary_connector.rs  processor.rs  quorum_broadcast.rs  quorum_waiter.rs  receive_worker.rs  send_worker.rs  sync_worker.rs  synchronizer.rs  worker.rs
rust/worker/src/tests/: batch_maker_tests.rs  common.rs  helper_tests.rs  net_tests.rs  primary_worker_intergration_tests.rs  processor_tests.rs  quorum_waiter_tests.rs  receiver_tests.rs  sync_worker_tests.rs  synchronizer_tests.rs  worker_integration_tests.rs  worker_tests.rs
store/src/: lib.rs
store/src/tests/: store_tests.rs
worker/: README.md
(+306 files in other folders)
