[package]
name = "hotstuff"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
thiserror = "1.0.21"
tokio = { version = "1.3.0", features = ["rt", "macros", "sync"] }
ed25519-dalek = "1.0.1"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
bincode = "1.3.1"
futures = "0.3.8"
async-recursion = "0.3.1"
base64 = "0.13.0"
async-trait = "0.1.50"

store = { path = "../store" }
crypto = { path = "../crypto" }
network = { path = "../network" }
config = { path = "../config" }
primary = { path = "../primary" }

[dev-dependencies]
tokio-util = { version = "0.6.2", features= ["codec"] }
rand = "0.7.3"

[features]
benchmark = []