[package]
name = "bench_worker"
version = "0.1.0"
authors = ["George Danezis <gdanezis@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
futures = "0.3"
clap = "2.33.3"
serde = "1.0.116"
serde_json = "1.0.58"
rand = "0.7.3"
env_logger = "0.7.1"
log = "0.4.11"
bytes = "1.0.1"
bincode = "1.3.1"

store = { path = "../store" }
crypto = { path = "../crypto" }
dag_core = { path = "../dag_core" }
worker = { path = "../worker" }
consensus = { path = "../consensus" }