[package]
name = "bench_worker"
version = "0.1.0"
authors = ["George Danezis <gdanezis@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features= ["codec"]}
futures = "0.3"
dag_core = { path = "../dag_core" }
clap = "2.33.3"
serde = "1.0.116"
serde_json = "1.0.58"
rand = "0.7.3"
env_logger = "0.7.1"
log = "0.4.11"
bytes = "0.5"
bincode = "1.3.1"
