[package]
name = "dag_core"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
publish = false
edition = "2018"

[dependencies]
displaydoc = "0.1.7"
failure = "0.1.8"
rstest = "0.6.4"
rand = "0.7.3"
futures = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
ed25519-dalek = { version = "1.0.0", features = ["batch"] }
base64 = "0.12.0"
thiserror = "1.0.20"
tokio-util = { version = "0.3", features= ["codec"]}
rocksdb = "0.14.0"
bincode = "1.3.1"
bytes = "0.5"
async-std = { version = "1.5", features = ["attributes"] }
env_logger = "0.7.1"
log = "0.4.11"

