[package]
name = "hotstuff"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
thiserror = "1.0.21"
tokio = { version = "1.1.0", features = ["rt", "time", "macros", "sync"] }
ed25519-dalek = "1.0.1"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
bincode = "1.3.1"
futures = "0.3.8"
async-trait = "0.1.42"
async-recursion = "0.3.1"
base64 = "0.13.0"
serde_json = "1.0.61"


network = { path = "../network_hs" }
dag_core = { path = "../dag_core" }

[dev-dependencies]
rand = "0.7.3"

[features]
benchmark = []