[package]
name = "network"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.1.0", features = ["rt", "net", "sync", "macros", "time"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
thiserror = "1.0.21"
bytes = "1.0.1"
bincode = "1.3.1"
log = "0.4.0"
futures = "0.3.8"
serde = "1.0"
serde_json = "1.0.61"
