[package]
name = "primary"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
publish = false
edition = "2018"

[dependencies]
failure = "0.1.8"
rstest = "0.6.4"
rand = "0.7.3"
futures = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.5.0", features = ["full"] }
ed25519-dalek = { version = "1.0.0", features = ["batch"] }
base64 = "0.12.0"
thiserror = "1.0.20"
tokio-util = { version = "0.6.2", features= ["codec"] }
rocksdb = "0.14.0"
bincode = "1.3.1"
bytes = "1.0.1"
async-std = { version = "1.5", features = ["attributes"] }
env_logger = "0.7.1"
log = "0.4.11"
async-recursion = "0.3.2"
async-trait = "0.1.50"

crypto = { path = "../crypto" }
store = { path = "../store" }
config = { path = "../config" }
network = { path = "../network" }