[package]
name = "worker"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
ed25519-dalek = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
log = "0.4.14"
bincode = "1.3.3"
futures = "0.3.14"
rstest = "0.6.4"

crypto = { path = "../crypto" }
store = { path = "../store" }
dag_core = { path = "../dag_core" }

[dev-dependencies]
rand = "0.7.3"
